Added rules and tickets serialization
